# iai_interview

./: CMakeLists.txt  README.md
data/: datalog-navigation.txt
include/: iai_implementation.h  iai_interface.h
src/: iai_implementation.cpp  iai_main.cpp
